--- a/aspendreact/src/stylesheet/new-style.css
+++ b/aspendreact/src/stylesheet/new-style.css
@@ -5,6 +5,7 @@
 
 body {
     font-family: "Andalemono";
+    overflow-x: hidden;
 }
 
 *{
